# smart-home-in-rust-with-home-assistant

./: Cargo.toml  PULL_REQUEST_TEMPLATE  README.md  deny.toml  pyproject.toml  usage.py
.github/workflows/: CI.yml
arbitrary-value/: Cargo.toml
arbitrary-value/src/: arbitrary.rs  finite_f64.rs  lib.rs  map.rs  map_key.rs
driver/kasa/: Cargo.toml
driver/kasa/src/: connection.rs  impl_protocol.rs  lib.rs  messages.rs
emitter-and-signal/: Cargo.toml
emitter-and-signal/src/: emitter.rs  emitter_ext.rs  lib.rs  signal.rs  signal_ext.rs
entrypoint/: Cargo.toml
entrypoint/src/: lib.rs  tracing_to_home_assistant.rs
entrypoint/src/home_assistant/: entity_id.rs  home_assistant.rs  logger.rs  mod.rs  object_id.rs  service_registry.rs  slug.rs  state_machine.rs  state_object.rs
entrypoint/src/home_assistant/event/: event.rs  event_origin.rs
entrypoint/src/home_assistant/event/context/: id.rs
entrypoint/src/home_assistant/event/specific/: state_changed.rs
entrypoint/src/home_assistant/light/: mod.rs  protocol.rs  state.rs
entrypoint/src/home_assistant/light/service/: mod.rs  turn_off.rs  turn_on.rs
entrypoint/src/home_assistant/service/: service_id.rs
home-assistant/: Cargo.toml
home-assistant/src/: home_assistant.rs  logger.rs  service_registry.rs  state.rs  state_machine.rs  state_object.rs
home-assistant/src/event/context/: context.rs  mod.rs
home-assistant/src/event/specific/: state_changed.rs
home-assistant/src/light/: attributes.rs  mod.rs  protocol.rs  state.rs
home-assistant/src/light/service/: turn_off.rs  turn_on.rs
home-assistant/src/service/: mod.rs  service_domain.rs
protocol/: Cargo.toml
protocol/src/: light.rs
python-utils/: Cargo.toml
python-utils/src/: lib.rs
src/: lib.rs  python_utils.rs  tracing_to_home_assistant.rs
src/arbitrary/: arbitrary.rs  finite_f64.rs  map.rs  map_key.rs  mod.rs
src/home_assistant/: domain.rs  entity_id.rs  home_assistant.rs  logger.rs  mod.rs  object_id.rs  state.rs  state_machine.rs
src/home_assistant/event/: event.rs  mod.rs
src/home_assistant/event/context/: context.rs  id.rs
src/home_assistant/event/specific/: mod.rs  state_changed.rs
src/store/: mod.rs
