[workspace]
members = [
    "arbitrary-value",
    "driver/kasa",
    "emitter-and-signal",
    "entrypoint",
    "protocol",
]
resolver = "2"

[workspace.dependencies]
backoff = "0.4.0"
chrono = "0.4.40"
chrono-tz = "0.10.1"
deranged = "0.4.1"
derive_more = "2.0.1"
snafu = "0.8.5"
tokio = "1.32.0"
pyo3 = "0.24.0"
pyo3-async-runtimes = "0.24.0"
tracing = "0.1.37"
