[workspace]
members = [
    "arbitrary-value",
    "driver/kasa",
    "emitter-and-signal",
    "entrypoint",
    "home-assistant",
    "protocol",
    "python-utils",
]
resolver = "2"

[workspace.package]
license = "Unlicense"

[workspace.dependencies]
backon = "1.5"
chrono = "0.4.40"
chrono-tz = "0.10.1"
deranged = "0.4"
derive_more = "2.0.1"
snafu = "0.8.5"
tokio = "1.32.0"
pyo3 = "0.24.0"
pyo3-async-runtimes = "0.24.0"
tracing = "0.1.37"
