[tool.poetry]
name = "smart-home-in-rust-with-home-assistant"
version = "0.1.0"
description = ""
authors = ["J / Jacob Babich <jacobbabichpublic+git@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "smart-home-in-rust-with-home-assistant"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
