[package]
name = "smart-home-in-rust-with-home-assistant"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "smart_home_in_rust_with_home_assistant"
crate-type = ["cdylib"]

[dependencies]
arbitrary-value = { path = "../arbitrary-value", features = ["pyo3"] }
arc-swap = "1.7.1"
async-gate = "0.4.0"
axum = { version = "0.8.1", default-features = false, features = [
    "http1",
    "tokio",
] }
chrono = { workspace = true }
chrono-tz = { workspace = true }
deranged = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = [
    "display",
    "from",
    "from_str",
    "into",
    "try_from",
    "try_into",
] }
driver-kasa = { path = "../driver/kasa" }
emitter-and-signal = { path = "../emitter-and-signal" }
im = { version = "15.1.0", features = ["rayon"] }
once_cell = "1.21.3"
protocol = { path = "../protocol" }
pyo3 = { workspace = true, features = [
    "auto-initialize",
    "chrono",
    "extension-module",
] }
pyo3-async-runtimes = { workspace = true, features = [
    "attributes",
    "tokio-runtime",
] }
shadow-rs = { version = "1.0.1", default-features = false }
smol_str = "0.3.2"
snafu = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.17"
ulid = "1.2.0"
uom = "0.36.0"

[build-dependencies]
shadow-rs = "1.0.1"
