[package]
name = "home-assistant"
version = "0.1.0"
edition = "2021"
license = { workspace = true }

[features]
tracing = ["dep:tracing"]

[dependencies]
arbitrary-value = { path = "../arbitrary-value", features = ["pyo3"] }
chrono = { workspace = true }
chrono-tz = { workspace = true }
derive_more = { workspace = true, features = [
    "display",
    "from",
    "from_str",
    "into",
    "try_from",
    "try_into",
] }
emitter-and-signal = { path = "../emitter-and-signal" }
once_cell = "1.21.3"
protocol = { path = "../protocol" }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"] }
python-utils = { path = "../python-utils" }
smol_str = "0.3.2"
snafu = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { workspace = true }
tracing = { optional = true, workspace = true }
ulid = "1.2.0"
