[package]
name = "driver-kasa"
version = "0.1.0"
edition = "2021"
license = { workspace = true }

[dependencies]
backon = { workspace = true }
deranged = { workspace = true }
mac_address = { version = "1.1.8", features = ["serde"] }
protocol = { path = "../../protocol" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
serde_with = "3.12.0"
snafu = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "sync", "time"] }
tracing = { workspace = true }
